src/components/listProducts/style.css
.productContainer {
  display: flex;
  padding: 1rem;
  align-items: center;
}
.productCard {
  display: flex;
  flex-direction: column;
  border: 1px solid #0000005d;
  border-radius: .4rem;
  width: 18rem;
  margin: 1rem;
  padding: 1rem;
}
.currencyInput:read-only {
  border: 0;
}
.button {
  padding: .5rem;
  border-radius: .4rem;
  font-size: 10px;
}
.itemName,.currencyInput {
  margin-bottom: 1rem;
}

